--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Tiny Homes in Paradise</a>
+        <a class="navbar-brand" href="#">Island Beginnings</a>
       </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
